# session-rs

./: Cargo.toml  README.md
examples/: client.rs  server.rs
src/: handshake.rs  lib.rs  server.rs  session.rs
src/ws/: error.rs  handshake.rs  mod.rs
