[package]
name = "session-rs"
version = "0.1.2"
edition = "2024"
description = "A lightweight async WebSocket protocol"
license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time",
] }
